--- a/niktravel/static/scss/_ed-grid.scss
+++ b/niktravel/static/scss/_ed-grid.scss
@@ -68,6 +68,7 @@
 @import "collections/gallery.scss";
 @import "collections/program";
 @import "collections/list";
+@import "collections/form";
 
 // layuaut 
 @import "layaut/app.scss";
