--- a/niktravel/templates/home/index.html
+++ b/niktravel/templates/home/index.html
@@ -21,16 +21,16 @@
       <div class="banner">
         <img src="{% static 'img/machu-picchu.jpg' %}" alt="" class="banner__img">
         <div class="banner__data">
-          <h1 class="banner__title">cusco</h1>
+          <h1 class="banner__title">INKA VIP TRAVEL</h1>
           <p class="banner__description">
-            {% trans 'Mística ciudad sagrada, considerada la capital del Imperio Tahuantinsuyo con un gran legado histórico y arquitectónico. Rodeada de valles verdosos con imponentes atractivos turísticos, cultura, tradición y fe aún latente. Conocida como el ombligo del mundo por ser el centro político y territorial del Imperio Incaico, el departamento de Cusco nos muestra una impactante variedad geográfica desde naturales cordilleras y relieves, hasta ríos como el Urubamba.' %} 
+            {% trans 'Falta descripcion' %} 
           </p>
         </div>
       </div>
 
       <section class="section">
         <h2 class="section__title">{% trans 'MEJORES OFERTAS' %}</h2>
-        <span class="section__subtitle">{% trans 'mira nuestras mejores promociones en tours' %}</span>
+        <span class="section__subtitle">{% trans 'Mira nuestras mejores promociones en tours' %}</span>
 
         <div class="tours">
           
@@ -58,7 +58,7 @@
               </ul>
               <div class="tour__footer">
                 <a href="{% url 'tours_app:detail' oferta.category oferta.slug %}" class="tour__btn">
-                  {% trans 'MAS INFORCIÓN' %}
+                  {% trans 'VER DETALLES' %}
                 </a>
               </div>
             </div>            
@@ -137,31 +137,31 @@
 
           <div class="card">
             <span class="card__icon icon-star"></span>
-            <h3 class="card__title">{% trans 'World Class Service' %}</h3>  
+            <h3 class="card__title">{% trans 'Calidad De Servicio' %}</h3>  
             <p class="card__description">{% trans 'Lorem ipsum dolor. Mollitia praesentium laborum omnis laudantium voluptatem inventore rerum aperiam saepe ipsum' %}.</p>
-            <a href="" class="card__link">{% trans 'mas información' %}.</a>
+            <a href="" class="card__link">{% trans 'más información' %}.</a>
           </div>
 
           <div class="card">
             <span class="card__icon icon-globe"></span>
-              <h3 class="card__title">{% trans 'World Class Service' %} </h3>  
+              <h3 class="card__title">{% trans 'Remposabilidad Social' %} </h3>  
               <p class="card__description">{% trans 'Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia praesentium laborum omnis aperiam saepe ipsum' %}.</p>
-              <a href="" class="card__link">{% trans 'mas información' %}.</a>
+              <a href="" class="card__link">{% trans 'más información' %}.</a>
           </div>
 
           <div class="card">
             <span class="card__icon icon-price-tag"></span>
-              <h3 class="card__title">{% trans 'World Class Service' %} </h3>  
+              <h3 class="card__title">{% trans 'Mejores Precios Garantizados' %} </h3>  
               <p class="card__description">{% trans 'Lorem ipsum dolor sit amet, consect adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa' %}.</p>
-              <a href="" class="card__link">{% trans 'mas información' %}.</a>
+              <a href="" class="card__link">{% trans 'más información' %}.</a>
           </div>
 
         </div>
       </section>
 
       <section class="section">
-        <h2 class="section__title">{% trans 'MEJORES OFERTAS' %}</h2>
-        <span class="section__subtitle">{% trans 'Mira nuestras tours mas recientes' %}</span>
+        <h2 class="section__title">{% trans 'NUESTROS PAQUETES TURÍSTICOS' %}</h2>
+        <span class="section__subtitle">{% trans 'Escoge entre nuestros paquetes recomendados por nuestros clientes' %}</span>
         
         <div class="tours">
 
