--- a/niktravel/static/scss/layaut/_banner.scss
+++ b/niktravel/static/scss/layaut/_banner.scss
@@ -1,5 +1,17 @@
 .banner {
     position: relative;
+
+    &::after {
+        content: "";
+        position: absolute;
+        top: 0;
+        right: 0;
+        left: 0;
+        bottom: 0;
+        background-color: #000;
+        opacity: .05;
+    }
+
     &__img {
         width: 100%;
         height: 100vh;
