--- a/niktravel/static/scss/layaut/_header.scss
+++ b/niktravel/static/scss/layaut/_header.scss
@@ -7,4 +7,11 @@
     background-color:transparent;
     align-items: center;
     z-index: $z-header;
+
+    &-container {
+        @include edItem;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
 }
