--- a/niktravel/templates/include/header.html
+++ b/niktravel/templates/include/header.html
@@ -1,46 +1,51 @@
 {% load i18n %}
 
 <header class="header">
-    <div class="toggle-menu" id="toogle-menu">
-        <span class="bar" aria-hidden="true"></span>
-    </div>
-    <a href="#" class="logo-header">
-        Inkatravel vip
-        <!-- <img src="#" alt="inka travel vip" class="logo__header"> -->
-    </a>
-    
-    <nav class="main-nav">
-        <ul class="main-menu">
-            <li class="main-menu__item">
-                <a href="#" class="main-menu__link">{% trans 'full day' %}</a>
-            </li>
-            <li class="main-menu__item">
-                <a href="#" class="main-menu__link">{% trans 'paquetes' %}</a>
-            </li>
-            <li class="main-menu__item">
-                <a href="#" class="main-menu__link">{% trans 'tours machupicchu' %} </a>
-            </li>
-            <li class="main-menu__item">
-                <a href="#" class="main-menu__link">{% trans 'quienes somos' %}</a>
-            </li>
-            <li class="main-menu__item--phone">
-                <a href="#" class="main-menu__link">{% trans 'Telefono' %}</a>
-            </li>
-        </ul>
-    </nav>
+    <div class="header-container">
+        <div class="toggle-menu" id="toogle-menu">
+            <span class="bar" aria-hidden="true"></span>
+        </div>
+        <a href="#" class="logo-header">
+            Inkatravel vip
+            <!-- <img src="#" alt="inka travel vip" class="logo__header"> -->
+        </a>
+        <nav class="main-nav">
+            <ul class="main-menu">
+                <li class="main-menu__item">
+                    <a href="#" class="main-menu__link">{% trans 'tours' %}</a>
+                </li>
+                <li class="main-menu__item">
+                    <a href="#" class="main-menu__link">{% trans 'paquetes' %}</a>
+                </li>
+                <li class="main-menu__item">
+                    <a href="#" class="main-menu__link">{% trans 'tours a machupicchu' %} </a>
+                </li>
+                <li class="main-menu__item">
+                    <a href="#" class="main-menu__link">{% trans 'acerca de nosotros' %}</a>
+                </li>
+                <li class="main-menu__item--phone">
+                    <a href="https://api.whatsapp.com/send?phone=51964336835&text={% trans 'Hola, INKA VIP TRAVEL tengo una consulta' %}" class="main-menu__link--phone">
+                        <span class="icon-whatsapp"></span> +51 964336835
+                    </a>
+                </li>
+            </ul>
+        </nav>
+        <form id="form-language" class="form-language" action="{% url 'set_language' %}" method="post">{% csrf_token %}
+            <input name="next" type="hidden" value="{{ redirect_to }}" />
+            <select id="language" class="select__language" name="language">
+                {% get_current_language as LANGUAGE_CODE %}
+                {% get_available_languages as LANGUAGES %}
+                {% get_language_info_list for LANGUAGES as languages %}
+                {% for language in languages %}
+                    <option value="{{ language.code }}"{% if language.code == LANGUAGE_CODE %} selected{% endif %}>
+                        {{ language.name_local }} ({{ language.code }})
+                    </option>
+                {% endfor %}
+            </select>
+        </form>
 
-    <form id="form-language" action="{% url 'set_language' %}" method="post">{% csrf_token %}
-        <input name="next" type="hidden" value="{{ redirect_to }}" />
-        <select id="language" name="language">
-            {% get_current_language as LANGUAGE_CODE %}
-            {% get_available_languages as LANGUAGES %}
-            {% get_language_info_list for LANGUAGES as languages %}
-            {% for language in languages %}
-                <option value="{{ language.code }}"{% if language.code == LANGUAGE_CODE %} selected{% endif %}>
-                    {{ language.name_local }} ({{ language.code }})
-                </option>
-            {% endfor %}
-        </select>
-    </form>
+    </div>
+    
+
 
 </header>
