--- a/niktravel/static/css/styles.css
+++ b/niktravel/static/css/styles.css
@@ -1093,19 +1093,33 @@ h1, h2, h3, h4 {
     -webkit-box-pack: end;
         -ms-flex-pack: end;
             justify-content: flex-end;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
   }
 }
 
 @media screen and (min-width: 1024px) {
   .main-menu__item, .main-menu__item--phone {
-    padding: 1em 1em;
+    padding: 0 .5em;
   }
 }
 
 .main-menu__item--phone {
   background-color: #fff;
-  color: red;
   border-radius: 25px;
+}
+
+.main-menu__link--phone {
+  color: #222;
+  font-weight: 700;
+  font-size: .9em;
+  padding: .4em .2em;
+  display: block;
+}
+
+.main-menu__link--phone:hover {
+  text-decoration: none;
 }
 
 .main-menu__link {
@@ -1114,7 +1128,6 @@ h1, h2, h3, h4 {
   color: #ffF;
   font-weight: 700;
   text-transform: capitalize;
-  color: #b3b3b3;
   border-bottom: 1px solid #4d4d4d;
   font-size: .85em;
   cursor: pointer;
@@ -1287,6 +1300,12 @@ h1, h2, h3, h4 {
   padding: 3.75px;
 }
 
+.tour-detail__item::before {
+  content: '✓';
+  padding-right: 5px;
+  font-weight: 700;
+}
+
 .tour--new {
   display: grid;
   grid-template-columns: 2fr 1fr;
@@ -1359,6 +1378,7 @@ h1, h2, h3, h4 {
   margin-left: auto;
   margin-right: auto;
   width: 100%;
+  padding-top: 15px;
   grid-template-columns: 1fr;
   grid-gap: 3.28125em;
 }
@@ -1420,6 +1440,7 @@ h1, h2, h3, h4 {
 .card__title {
   font-size: 1.414rem;
   font-weight: 700;
+  margin-bottom: 7.5px;
 }
 
 @media screen and (min-width: 640px) {
@@ -1682,6 +1703,10 @@ h1, h2, h3, h4 {
   padding-bottom: 7.5px;
 }
 
+.form-language {
+  margin-left: .2em;
+}
+
 .select__language {
   -webkit-appearance: none;
      -moz-appearance: none;
@@ -1740,6 +1765,10 @@ h1, h2, h3, h4 {
   color: #333;
   font-size: 0.817rem;
   line-height: 19.5px;
+}
+
+.section--full {
+  max-width: 100%;
 }
 
 .section--paralax {
