--- a/niktravel/templates/tours/detail.html
+++ b/niktravel/templates/tours/detail.html
@@ -62,8 +62,12 @@
 
 
       <section class="section">
-        <h2 class="section__title">{{ tour.name }}</h2>
-        <span class="section__subtitle">Experiencia en {{ tour.duration }} dia(s) de viaje</span>
+        <h2 class="section__title">{{ tour.name|title }}</h2>
+        <span class="section__subtitle">
+        {% blocktrans with duration=tour.duration %}
+          Experiencia en {{ duration }} dia(s) de viaje
+        {% endblocktrans %}
+         </span>
         
         {% if LANGUAGE_CODE == "es" %}
           <div class="section__content">
@@ -121,8 +125,8 @@
       </section>
 
       <section class="ed-container">
-        <section class="ed-item s-100 m-50 section">
-          <h2 class="section__title">{% trans 'INCLUYE' %}</h2>
+        <section class="ed-item s-100 m-1-3 section">
+          <h3 class="section__title">{% trans 'INCLUYE' %}</h3>
           
           <ul class="list">
           
@@ -134,13 +138,26 @@
   
         </section>
         
-        <section class="ed-item s-100 m-50 section">
-          <h2 class="section__title">{% trans 'NO INCLUYE' %}</h2>
+        <section class="ed-item s-100 m-1-3 section">
+          <h3 class="section__title">{% trans 'NO INCLUYE' %}</h3>
           
           <ul class="list">
             
             {% for noInclude in tour.no_include.all %}
               <li class="list__item">{{ noInclude }}</li>
+            {% endfor %}
+
+          </ul>
+  
+        </section>
+
+        <section class="ed-item s-100 m-1-3 section">
+          <h3 class="section__title">{% trans 'RECOMEDACIONES' %}</h3>
+          
+          <ul class="list">
+            
+            {% for recommendation in tour.recommendation.all %}
+              <li class="list__item">{{ recommendation }}</li>
             {% endfor %}
 
           </ul>
