creacion de diseño y funcinalidad de cart shopping

--- a/niktravel/static/scss/_ed-grid.scss
+++ b/niktravel/static/scss/_ed-grid.scss
@@ -69,6 +69,8 @@
 @import "collections/program";
 @import "collections/list";
 @import "collections/form";
+@import "collections/table";
+@import "collections/order";
 
 // layuaut 
 @import "layaut/app.scss";
