--- a/niktravel/templates/tours/detail.html
+++ b/niktravel/templates/tours/detail.html
@@ -53,7 +53,7 @@
             </div>
 
             <div class="package__box">
-                <a href="#" class="package__btn">{% trans 'COMPRAR' %}</a>
+                <a href="{% url 'tours_app:cart' tour.category tour.slug %}" class="package__btn">{% trans 'COMPRAR' %}</a>
             </div>
 
           </div>
@@ -188,7 +188,7 @@
                   </p>
                   
                   <span class="gallery__call">{% trans 'Compra este paquete' %}</span>
-                  <a href="#" class="gallery__btn">{% trans 'Comprar Ahora' %}</a>
+                  <a href="{% url 'tours_app:cart' tour.category tour.slug %}" class="gallery__btn">{% trans 'Comprar Ahora' %}</a>
                 </div>
               </div>
             {% else %}
