--- a/niktravel/static/scss/layaut/_section.scss
+++ b/niktravel/static/scss/layaut/_section.scss
@@ -31,6 +31,11 @@
     @include full;
 }
 
+.section--cart {
+    flex-direction: row;
+    justify-content: space-between;
+}
+
 .section--paralax {
     @include edContainer;
     @include full;
