diseño de carrito de compra y checkout

--- a/niktravel/static/scss/_ed-grid.scss
+++ b/niktravel/static/scss/_ed-grid.scss
@@ -71,6 +71,7 @@
 @import "collections/form";
 @import "collections/table";
 @import "collections/order";
+@import "collections/payment";
 
 // layuaut 
 @import "layaut/app.scss";
