--- a/niktravel/static/scss/_settings.scss
+++ b/niktravel/static/scss/_settings.scss
@@ -27,8 +27,8 @@ $line-height: 15px;
 
 //-- nombre de fuente
 
-@import url('https://fonts.googleapis.com/css?family=Raleway:400,700,700i');
-$family: 'Raleway', sans-serif; 
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700,700i');
+$family: 'Open Sans', sans-serif;
 
 //-- grosor de fuente
 $light: 400;
