--- a/niktravel/static/scss/collections/_table.scss
+++ b/niktravel/static/scss/collections/_table.scss
@@ -1,12 +1,22 @@
-.table {
-    @include edItem(100, 70);
+%table {
     display: grid;
-    grid-template-columns: 3fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 3fr 1fr 1fr 1fr;
     grid-template-rows: auto auto;
     align-items: center;
 
     border-bottom: 1px solid #dee3df;
     border-top: 1px solid #dee3df;
+}
+
+.table {
+    @extend %table;
+    @include edItem(100, 70);
+}
+
+.table--full {
+    @extend %table;
+    @include edItem(100);
+
 }
 
 .table-header {
@@ -16,10 +26,14 @@
     text-transform: uppercase;
     font-size: $s1;
     font-weight: $regular;
+
+    &:nth-child(1), &:nth-child(2), &:nth-child(3), &:nth-child(4), &:nth-child(5) {
+        grid-row: 1;
+    }
 }
 
 [class*="table-content__"] {
-    padding-top: $gutter*2;
+    margin-top: rem(30px);
     padding-bottom: $gutter*2;
     font-size: $s1;
     align-self: start;
@@ -30,9 +44,16 @@
     justify-content: space-between;
 }
 
+.table-content__total--cta {
+    color: $primary;
+    font-size: $base;
+    font-weight: $regular;
+}
+
 .table-tour{
 
     &__img {
+        @include showFrom(m);
         display: block;
         width: 45%;
         object-fit: cover;
