--- a/niktravel/static/scss/collections/_tours.scss
+++ b/niktravel/static/scss/collections/_tours.scss
@@ -70,8 +70,20 @@
         justify-self: center;
         align-self: start;                        
         @include from(m) {
-            font-size: $base;
+            font-size: $base*0.9;
         }
+        &-normal {
+            font-size: $s1;
+            color: #666;
+            text-decoration: line-through;
+        }
+        &-des {
+            color: $primary;
+            font-size: $base;
+            margin-left: $gutter*0.5;
+            font-style: italic;
+        }
+
     }
     &__footer {
         grid-row: 6;
@@ -84,6 +96,7 @@
         @include edgridButton($primary, #fff, round);
         font-size: $s1;
         font-weight: $regular;
+        margin-top: $line-height;
     }
 }
 
@@ -93,12 +106,14 @@
     margin: 0;
     list-style: none;
     @extend %title3;
-    padding: 0 $gutter/2;
+    padding: 0 $gutter/3;
     @include from(m) {
-        font-size: $s1;
     }
     &__item {
-        padding: $line-height/4;
+        font-size: $s1;
+        padding: $line-height/3;
+        color: #666;
+
         &::before {
             content: '✓';
             padding-right: 5px;
@@ -115,7 +130,7 @@
     position: relative;
     &__img {
         width: 100%;
-        height: 250px;
+        height: 300px;
         object-fit: cover;
         grid-row: 1;
         grid-column: 1/3;
@@ -158,11 +173,19 @@
 
     }
     &__title {
-        flex-basis: 75%;
+        flex-basis: 70%;
         text-transform: uppercase;        
 
     }
     &__cost {
-        flex-basis: 25%;
+        flex-basis: 30%;
+    }
+    &__cost-normal {
+        font-size: $s2*1.25;
+        text-decoration: line-through;
+    }
+    &__cost-des {
+        color: $primary;
+        margin-left: 5px;
     }
 }
