--- a/niktravel/templates/tours/payment.html
+++ b/niktravel/templates/tours/payment.html
@@ -21,25 +21,19 @@
     <main class="main">
 
       <section class="section">
-        <h2 class="section__title">{% trans 'CARRITO DE COMPRA' %}</h2>
-        <span class="section__subtitle">{% trans 'Experiencia de clase mundial' %}</span>
+        <h2 class="section__title">{% trans 'DETALLE' %}</h2>
+        <span class="section__subtitle">{% trans 'Completa Tu Compra' %}</span>
       </section>
 
-      <section class="section">
-        {% if form.errors %}
-          <span class="error">{{ form.non_field_errors }}</span>
-        {% endif %}
-      </section>
-      <section class="section section--cart">
-        <div class="table">
-          <span class="table-header">Nombre del Tour</span>
-          <span class="table-header">Cantidad</span>
-          <span class="table-header">Precio</span>
+      <section class="section--payment">
+        <div class="table--full">
+          <span class="table-header">Tour</span>
+          <span class="table-header">{% trans 'Cantidad' %}</span>
+          <span class="table-header">{% trans 'Precio' %}</span>
           <span class="table-header">Total</span>
-          <span class="table-header">Acción</span>
 
           <div class="table-content__tour">
-            <img src="{{ tour.cover.url }}" alt="" class="table-tour__img">
+            <img src="{{ tour.cover.url }}" alt="{{ tour.name }}" class="table-tour__img">
             <div class="table-tour__info">
               <h3 class="table-tour__name">{{ tour.name|title }}</h3>
               <div class="table-tour__item">Destino: <span>{{ tour.place }}</span></div>
@@ -47,22 +41,70 @@
               <div class="table-tour__item">Categoria: <span>{{ tour.category }}</span></div>
             </div>
           </div>
-          <div class="table-content__count">            
-            {{ quantity }}
-          </div>
-          <div id="cartPrice" class="table-content__price">{{ tour.price_des_sol }}</div>
-          <div id="cartTotal" class="table-content__total">{{ tour.price_des_sol }}</div>
-          <div class="table-content__remove"><a href="#">remover</a></div>
+          <div class="table-content__count">{{ quantity }}</div>
+          <div id="cartPrice" class="table-content__price">$ {{ tour.price_des_dolar }}</div>
+          <div id="cartTotal" class="table-content__total--cta">$ {{ total }}</div>
         </div>
 
-        <div class="order">
-          <h3 class="order__title">Resumen De Tu Pedido</h3>
-          <div class="order__count">Viajeros: <span id="orderQuantity">1</span></div>
-          <div class="order__total">Costo Total: <span id="orderTotal">S/ {{ tour.price_des_sol }}</span></div>
-          <button id="orderBtn" class="order__btn">Procesar compra</button>
+      </section>
+
+      <section class="section section--payment">
+      <h3 class="section__subtitle--left">Información Personal</h3>
+      <form method="POST" class="form--info">{% csrf_token %}
+        <div class="form__group">
+          <label for="">Nombres Completo</label>
+          <input class="form__input" type="text">
         </div>
+        <div class="form__group">
+          <label for="">Email</label>
+          <input class="form__input" type="email">
+        </div>
+        <div class="form__group">
+          <label for="">Codigo Postal</label>
+          <input class="form__input" type="text">
+        </div>
+        <div class="form__group">
+          <label for="">Pais</label>
+          <select class="form__input" name=select"" id="">
+            <option value="volvo">Volvo</option>
+            <option value="saab">Saab</option>
+            <option value="mercedes">Mercedes</option>
+            <option value="audi">Audi</option>
+          </select>
+        </div>
+        <button class="form__btn" type="submit"></button>
+      </form>
+
+      </section>
+
+      <section class="section section--payment">
+      <h3 class="section__subtitle--left">Otros metodos de pago</h3>
+      
+      <div class="payment-method">
+        <div class="payment-method__item">
+          <h4 class="payment-method__title">Interbank: S/ {{ tour.price_des_sol }} o $ {{ tour.price_des_dolar }} c/u</h4>
+          <ul class="list--payment">
+            <li class="list__item">cuenta <span>630-3093</span></li>
+            <li class="list__item">CCI: 630-309311111111</li>
+            <li class="list__item">Titular: Luis Fernando Uñunco Suma</li>
+            <li class="list__item--small">* en ventanilla la comision es de 9 soles</li>
+          </ul>
+        </div>
+        <div class="payment-method__item">
+          <h4 class="payment-method__title">Western Union</h4>
+          <ul class="list--payment">
+            <li class="list__item">cuenta <span>630-3093</span></li>
+            <li class="list__item">CCI: 630-309311111111</li>
+            <li class="list__item">Titular: Luis Fernando Uñunco Suma</li>
+            <li class="list__item--small">* en ventanilla la comision es de 9 soles</li>
+          </ul>
+      </div>
+
+      </div>
       
       </section>
+
+
 
     </main>
     {% include "include/footer.html" %}
